# abaks

./: .gitignore  AGENTS.md  BUILD.bazel  LICENSE  README.md  WORKSPACE  abaks.cabal  deps.nix  flake.nix
api/: BUILD.bazel  Main.hs  deps.nix  haskell.bzl
api/app/: Main.hs
src/Abaks/: Entities.hs  EventSourcing.hs  InterfaceAdapters.hs  UseCases.hs
src/Abaks/InterfaceAdapters/: API.hs
src/Abaks/Utils/: EventSourcing.hs  Random.hs  Servant.hs
test/Abaks/: EntitiesSpec.hs  UseCasesSpec.hs
