cabal-version:       3.0
name:                abaks
version:             0.1.0.0
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
category:            Data
build-type:          Simple
license:             ISC
license-file:        LICENSE
synopsis:            Bank reconciliation statements
description:         Bank reconciliation statements.
Homepage:            http://github.com/blackheaven/abaks

library
  default-language:   Haskell2010
  hs-source-dirs: src
  exposed-modules:
      Abaks.Entities
      Abaks.InterfaceAdapters.API
      Abaks.Utils.EventSourcing
      Abaks.Utils.Random
      Abaks.Utils.Servant
      Abaks.UseCases
  other-modules:
      Paths_abaks
  autogen-modules:
      Paths_abaks
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedRecordDot
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -threaded -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base
    , aeson
    , casing
    , containers
    , microlens
    , openapi3
    , polysemy
    , polysemy-plugin
    , servant
    , servant-client
    , servant-openapi3
    , servant-server
    , text
    , time
    , uuid

test-suite abaks-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      Abaks.EntitiesSpec
      Abaks.UseCasesSpec
      Paths_abaks
  autogen-modules:
      Paths_abaks
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedRecordDot
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base
    , abaks
    , hspec
    , hspec-core
    , hspec-discover
    , polysemy
    , polysemy-plugin
    , text
    , time
  default-language: Haskell2010

executable abaks-api
  -- type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: api
  other-modules:
      Paths_abaks
  autogen-modules:
      Paths_abaks
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedRecordDot
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base
    , abaks
    , mtl
    , polysemy
    , servant
    , servant-server
    , wai
    , warp
  default-language: Haskell2010
